[tool.poetry]
name = "graph"
version = "0.1.0"
description = "Package for building and manipulating graphs (In the sense nodes connected by edges sense)"
authors = ["David Buckley <david@davidbuckley.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
